# uta

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
benchmarks/core/: tensor_benchmark.cpp
docs/api/: README.md
docs/guide/: README.md
docs/performance/: README.md
examples/basic/: matmul.cpp
examples/distributed/: data_parallel.cpp
examples/optimization/: kernel_fusion.cpp
examples/profiling/: memory_analysis.cpp
include/uta/: distributed.hpp  ops.hpp  profiler.hpp  uta.hpp
src/core/: device_manager.cpp  memory_manager.hpp
src/core/autotuner/: autotuner.cpp  instruction_scheduler.hpp  memory_optimizer.hpp  tuner.hpp
src/core/compiler/: jit_compiler.hpp  linker.hpp  optimizer.hpp
src/core/distributed/: communication_backend.hpp  communicator.hpp  gradient_sync.hpp  model_parallel.hpp
src/core/profiler/: bottleneck_detector.hpp  kernel_profiler.hpp  memory_analyzer.hpp  memory_profiler.hpp  performance_counter.hpp  ptx_profiler.hpp  visualizer.hpp
src/core/ptx/: ptx_compiler.cpp  ptx_generator.hpp  tensor_ops.ptx
src/core/ptx/operations/: activations.ptx  attention.ptx  conv2d.ptx  dropout.ptx  matmul.ptx  mixed_precision.ptx  normalization.ptx  optimized_attention.ptx  positional_encoding.ptx  residual.ptx
src/core/runtime/: event.hpp  scheduler.hpp  task.hpp
tests/core/: context_test.cpp  tensor_test.cpp
